* Fixed compilation error if HOST_CPU was undefined
* Set default for lock-free search to true if HOST_CPU is i686
* Implement cgos-gameover to fix unnecessary pondering with CGOS Python client
  after game is over
* Avoid a crash if more than 2 GB are allocated on 32-bit Windoes systems
  without support for large memory addresses (tickets #73, #76)
* Updated documentation for 64-bit compilation on Windows (ticket #73)
* configure.ac: removed GCC warning flags -Wconversion, -ansi, -pedantic,
  because they generate warnings with Boost 1.45

Version 1.0 - 2010 Jan 23
=========================

* Command line option parsing is now done with boost::program_options.
  Deprecated SgCmdLineOpt is no longer used. Options start with "--". 
* Game-independent autobook builder to generate opening books
* Support for propagating proven wins and losses in the UCT tree
* Initial support for static win/loss detection in Go
* New configure parameter --enable-max-size. The parameter --enable-optimize
  is no longer supported. The new script setup-build.sh can be used to set up
  some commonly used build configurations.
* Use only the same floating point type for all counts and values in
  SgUctSearch. The floating point type cane be set with the configure
  parameter --enable-uct-value-type
* Added generic argument parsing function GtpCommand::Arg<T> and declared
  old function (GtpCommand::IntArg() etc.) as deprecated
* Old class GoGame was removed, GoGameRecord renamed to GoGame. GoGame
  does no longer provide non-const access to the tree and game state to
  guarantee its class invariants
* Made GoPlayer to store its search traces instead of appending them directly
  to the game tree
* Several optimizations to speed up the Monte-Carlo searches.
* Fuego now can be compiled natively on Windows with Visual C++ and MinGW.
* The Monte-Carlo search automatically sets reasonable default values for
  memory, number of threads and lock-free mode depending on the current
  machine.