@@ -658,19 +658,16 @@ GoUctGlobalSearch<POLICY,FACTORY>::GoUctGlobalSearch(GoBoard& bd,
 
     // Set a reasonable default value for the number of threads. The default
     // value is the the number of CPUs/cores of the current machine (but only
-    // if the default value of lock-free mode is true) and not higher than 16.
+    // if the default value of lock-free mode is true) and not higher than 4.
     // Multi-threaded search can be detrimental if lock-free mode is not used
     // and the default value should be good on all board sizes. The code uses
     // thread::hardware_concurrency() which was introduced in Boost 1.35.
-    // TODO: Test if the maximum default value can be set higher than 16
-    // by checking the maximum number of threads on the smallest board size
-    // that still improves the playing strength.
 #if BOOST_VERSION_MAJOR == 1 && BOOST_VERSION_MINOR >= 35
     if (LockFree())
     {
         unsigned int nuThreads = boost::thread::hardware_concurrency();
-        if (nuThreads > 16)
-            nuThreads = 16;
+        if (nuThreads > 4)
+            nuThreads = 4;
         SgDebug() << "GoUctGlobalSearch: setting default number of threads to "
                   << nuThreads << '\n';
         SetNumberThreads(nuThreads);
@@ -730,6 +727,7 @@ void GoUctGlobalSearch<POLICY,FACTORY>::SetDefaultParameters(int boardSize)
     SetExpandThreshold(std::numeric_limits<SgUctValue>::is_integer ? (SgUctValue)1 : std::numeric_limits<SgUctValue>::epsilon());
     SetVirtualLoss(true);
     SetBiasTermConstant(0.0);
+    SetExpandThreshold(3);
     if (boardSize < 15)
     {
         // These parameters were mainly tested on 9x9
