@@ -15,6 +15,8 @@ Current development version (branch VERSION_1_FIXES)
   after game is over
 * Avoid a crash if more than 2 GB are allocated on 32-bit Windoes systems
   without support for large memory addresses (tickets #73, #76)
+  The default memory used is now limited to 1 GB and the number od threads
+  to 4. The expand threshold is set to 3.
 * Updated documentation for 64-bit compilation on Windows (ticket #73)
 * configure.ac: removed GCC warning flags -Wconversion, -ansi, -pedantic,
   because they generate warnings with Boost 1.45
